Shell/parser.output
Grammar

    0 $accept: Zeile $end

    1 $@1: /* empty */

    2 Zeile: $@1 Kommando '\n'
    3      | '\n'
    4      | /* empty */

    5 Kommando: IF Kommando2 ';' THEN Kommando2 ';' ELSE Kommando2 ';' FI
    6         | IF Kommando2 ';' THEN Kommando2 ';' FI
    7         | Kommando1

    8 Kommando1: Kommando2 ';' Kommando1
    9          | Kommando2

   10 Kommando2: Kommando3 ANSONSTEN Kommando2
   11          | Kommando3

   12 Kommando3: Kommando4 UNDDANN Kommando3
   13          | Kommando4

   14 Kommando4: Kommando5 '|' Kommando4
   15          | Kommando5

   16 Kommando5: Kommando6 '&'
   17          | Kommando6

   18 Kommando6: Stringliste Umlenkungen
   19          | '(' Kommando ')'

   20 Stringliste: String
   21            | Stringliste String

   22 Umlenkungen: /* empty */
   23            | Umlenkung Umlenkungen

   24 Umlenkung: '>' String
   25          | DATEIANFUEGEN String
   26          | '<' String

   27 String: STRING
   28       | UNDEF


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2 3
'&' (38) 16
'(' (40) 19
')' (41) 19
';' (59) 5 6 8
'<' (60) 26
'>' (62) 24
'|' (124) 14
error (256)
ANSONSTEN (258) 10
UNDDANN (259) 12
DATEIANFUEGEN (260) 25
IF (261) 5 6
THEN (262) 5 6
ELSE (263) 5
FI (264) 5 6
STRING (265) 27
UNDEF (266) 28


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
Zeile (21)
    on left: 2 3 4, on right: 0
$@1 (22)
    on left: 1, on right: 2
Kommando (23)
    on left: 5 6 7, on right: 2 19
Kommando1 (24)
    on left: 8 9, on right: 7 8
Kommando2 (25)
    on left: 10 11, on right: 5 6 8 9 10
Kommando3 (26)
    on left: 12 13, on right: 10 11 12
Kommando4 (27)
    on left: 14 15, on right: 12 13 14
Kommando5 (28)
    on left: 16 17, on right: 14 15
Kommando6 (29)
    on left: 18 19, on right: 16 17
Stringliste (30)
    on left: 20 21, on right: 18 21
Umlenkungen (31)
    on left: 22 23, on right: 18 23
Umlenkung (32)
    on left: 24 25 26, on right: 23
String (33)
    on left: 27 28, on right: 20 21 24 25 26


state 0

    0 $accept: . Zeile $end

    '\n'  shift, and go to state 1

    $end      reduce using rule 4 (Zeile)
    $default  reduce using rule 1 ($@1)

    Zeile  go to state 2
    $@1    go to state 3


state 1

    3 Zeile: '\n' .

    $default  reduce using rule 3 (Zeile)


state 2

    0 $accept: Zeile . $end

    $end  shift, and go to state 4


state 3

    2 Zeile: $@1 . Kommando '\n'

    IF      shift, and go to state 5
    STRING  shift, and go to state 6
    UNDEF   shift, and go to state 7
    '('     shift, and go to state 8

    Kommando     go to state 9
    Kommando1    go to state 10
    Kommando2    go to state 11
    Kommando3    go to state 12
    Kommando4    go to state 13
    Kommando5    go to state 14
    Kommando6    go to state 15
    Stringliste  go to state 16
    String       go to state 17


state 4

    0 $accept: Zeile $end .

    $default  accept


state 5

    5 Kommando: IF . Kommando2 ';' THEN Kommando2 ';' ELSE Kommando2 ';' FI
    6         | IF . Kommando2 ';' THEN Kommando2 ';' FI

    STRING  shift, and go to state 6
    UNDEF   shift, and go to state 7
    '('     shift, and go to state 8

    Kommando2    go to state 18
    Kommando3    go to state 12
    Kommando4    go to state 13
    Kommando5    go to state 14
    Kommando6    go to state 15
    Stringliste  go to state 16
    String       go to state 17


state 6

   27 String: STRING .

    $default  reduce using rule 27 (String)


state 7

   28 String: UNDEF .

    $default  reduce using rule 28 (String)


state 8

   19 Kommando6: '(' . Kommando ')'

    IF      shift, and go to state 5
    STRING  shift, and go to state 6
    UNDEF   shift, and go to state 7
    '('     shift, and go to state 8

    Kommando     go to state 19
    Kommando1    go to state 10
    Kommando2    go to state 11
    Kommando3    go to state 12
    Kommando4    go to state 13
    Kommando5    go to state 14
    Kommando6    go to state 15
    Stringliste  go to state 16
    String       go to state 17


state 9

    2 Zeile: $@1 Kommando . '\n'

    '\n'  shift, and go to state 20


state 10

    7 Kommando: Kommando1 .

    $default  reduce using rule 7 (Kommando)


state 11

    8 Kommando1: Kommando2 . ';' Kommando1
    9          | Kommando2 .

    ';'  shift, and go to state 21

    $default  reduce using rule 9 (Kommando1)


state 12

   10 Kommando2: Kommando3 . ANSONSTEN Kommando2
   11          | Kommando3 .

    ANSONSTEN  shift, and go to state 22

    $default  reduce using rule 11 (Kommando2)


state 13

   12 Kommando3: Kommando4 . UNDDANN Kommando3
   13          | Kommando4 .

    UNDDANN  shift, and go to state 23

    $default  reduce using rule 13 (Kommando3)


state 14

   14 Kommando4: Kommando5 . '|' Kommando4
   15          | Kommando5 .

    '|'  shift, and go to state 24

    $default  reduce using rule 15 (Kommando4)


state 15

   16 Kommando5: Kommando6 . '&'
   17          | Kommando6 .

    '&'  shift, and go to state 25

    $default  reduce using rule 17 (Kommando5)


state 16

   18 Kommando6: Stringliste . Umlenkungen
   21 Stringliste: Stringliste . String

    DATEIANFUEGEN  shift, and go to state 26
    STRING         shift, and go to state 6
    UNDEF          shift, and go to state 7
    '>'            shift, and go to state 27
    '<'            shift, and go to state 28

    $default  reduce using rule 22 (Umlenkungen)

    Umlenkungen  go to state 29
    Umlenkung    go to state 30
    String       go to state 31


state 17

   20 Stringliste: String .

    $default  reduce using rule 20 (Stringliste)


state 18

    5 Kommando: IF Kommando2 . ';' THEN Kommando2 ';' ELSE Kommando2 ';' FI
    6         | IF Kommando2 . ';' THEN Kommando2 ';' FI

    ';'  shift, and go to state 32


state 19

   19 Kommando6: '(' Kommando . ')'

    ')'  shift, and go to state 33


state 20

    2 Zeile: $@1 Kommando '\n' .

    $default  reduce using rule 2 (Zeile)


state 21

    8 Kommando1: Kommando2 ';' . Kommando1

    STRING  shift, and go to state 6
    UNDEF   shift, and go to state 7
    '('     shift, and go to state 8

    Kommando1    go to state 34
    Kommando2    go to state 11
    Kommando3    go to state 12
    Kommando4    go to state 13
    Kommando5    go to state 14
    Kommando6    go to state 15
    Stringliste  go to state 16
    String       go to state 17


state 22

   10 Kommando2: Kommando3 ANSONSTEN . Kommando2

    STRING  shift, and go to state 6
    UNDEF   shift, and go to state 7
    '('     shift, and go to state 8

    Kommando2    go to state 35
    Kommando3    go to state 12
    Kommando4    go to state 13
    Kommando5    go to state 14
    Kommando6    go to state 15
    Stringliste  go to state 16
    String       go to state 17


state 23

   12 Kommando3: Kommando4 UNDDANN . Kommando3

    STRING  shift, and go to state 6
    UNDEF   shift, and go to state 7
    '('     shift, and go to state 8

    Kommando3    go to state 36
    Kommando4    go to state 13
    Kommando5    go to state 14
    Kommando6    go to state 15
    Stringliste  go to state 16
    String       go to state 17


state 24

   14 Kommando4: Kommando5 '|' . Kommando4

    STRING  shift, and go to state 6
    UNDEF   shift, and go to state 7
    '('     shift, and go to state 8

    Kommando4    go to state 37
    Kommando5    go to state 14
    Kommando6    go to state 15
    Stringliste  go to state 16
    String       go to state 17


state 25

   16 Kommando5: Kommando6 '&' .

    $default  reduce using rule 16 (Kommando5)


state 26

   25 Umlenkung: DATEIANFUEGEN . String

    STRING  shift, and go to state 6
    UNDEF   shift, and go to state 7

    String  go to state 38


state 27

   24 Umlenkung: '>' . String

    STRING  shift, and go to state 6
    UNDEF   shift, and go to state 7

    String  go to state 39


state 28

   26 Umlenkung: '<' . String

    STRING  shift, and go to state 6
    UNDEF   shift, and go to state 7

    String  go to state 40


state 29

   18 Kommando6: Stringliste Umlenkungen .

    $default  reduce using rule 18 (Kommando6)


state 30

   23 Umlenkungen: Umlenkung . Umlenkungen

    DATEIANFUEGEN  shift, and go to state 26
    '>'            shift, and go to state 27
    '<'            shift, and go to state 28

    $default  reduce using rule 22 (Umlenkungen)

    Umlenkungen  go to state 41
    Umlenkung    go to state 30


state 31

   21 Stringliste: Stringliste String .

    $default  reduce using rule 21 (Stringliste)


state 32

    5 Kommando: IF Kommando2 ';' . THEN Kommando2 ';' ELSE Kommando2 ';' FI
    6         | IF Kommando2 ';' . THEN Kommando2 ';' FI

    THEN  shift, and go to state 42


state 33

   19 Kommando6: '(' Kommando ')' .

    $default  reduce using rule 19 (Kommando6)


state 34

    8 Kommando1: Kommando2 ';' Kommando1 .

    $default  reduce using rule 8 (Kommando1)


state 35

   10 Kommando2: Kommando3 ANSONSTEN Kommando2 .

    $default  reduce using rule 10 (Kommando2)


state 36

   12 Kommando3: Kommando4 UNDDANN Kommando3 .

    $default  reduce using rule 12 (Kommando3)


state 37

   14 Kommando4: Kommando5 '|' Kommando4 .

    $default  reduce using rule 14 (Kommando4)


state 38

   25 Umlenkung: DATEIANFUEGEN String .

    $default  reduce using rule 25 (Umlenkung)


state 39

   24 Umlenkung: '>' String .

    $default  reduce using rule 24 (Umlenkung)


state 40

   26 Umlenkung: '<' String .

    $default  reduce using rule 26 (Umlenkung)


state 41

   23 Umlenkungen: Umlenkung Umlenkungen .

    $default  reduce using rule 23 (Umlenkungen)


state 42

    5 Kommando: IF Kommando2 ';' THEN . Kommando2 ';' ELSE Kommando2 ';' FI
    6         | IF Kommando2 ';' THEN . Kommando2 ';' FI

    STRING  shift, and go to state 6
    UNDEF   shift, and go to state 7
    '('     shift, and go to state 8

    Kommando2    go to state 43
    Kommando3    go to state 12
    Kommando4    go to state 13
    Kommando5    go to state 14
    Kommando6    go to state 15
    Stringliste  go to state 16
    String       go to state 17


state 43

    5 Kommando: IF Kommando2 ';' THEN Kommando2 . ';' ELSE Kommando2 ';' FI
    6         | IF Kommando2 ';' THEN Kommando2 . ';' FI

    ';'  shift, and go to state 44


state 44

    5 Kommando: IF Kommando2 ';' THEN Kommando2 ';' . ELSE Kommando2 ';' FI
    6         | IF Kommando2 ';' THEN Kommando2 ';' . FI

    ELSE  shift, and go to state 45
    FI    shift, and go to state 46


state 45

    5 Kommando: IF Kommando2 ';' THEN Kommando2 ';' ELSE . Kommando2 ';' FI

    STRING  shift, and go to state 6
    UNDEF   shift, and go to state 7
    '('     shift, and go to state 8

    Kommando2    go to state 47
    Kommando3    go to state 12
    Kommando4    go to state 13
    Kommando5    go to state 14
    Kommando6    go to state 15
    Stringliste  go to state 16
    String       go to state 17


state 46

    6 Kommando: IF Kommando2 ';' THEN Kommando2 ';' FI .

    $default  reduce using rule 6 (Kommando)


state 47

    5 Kommando: IF Kommando2 ';' THEN Kommando2 ';' ELSE Kommando2 . ';' FI

    ';'  shift, and go to state 48


state 48

    5 Kommando: IF Kommando2 ';' THEN Kommando2 ';' ELSE Kommando2 ';' . FI

    FI  shift, and go to state 49


state 49

    5 Kommando: IF Kommando2 ';' THEN Kommando2 ';' ELSE Kommando2 ';' FI .

    $default  reduce using rule 5 (Kommando)
